# 2025-final-command-team-7-Backend

./: Dockerfile  alembic.ini  compose.yaml  e2e.md  justfile  pyproject.toml  readme.md  swagger_mocks.md  test_coverage.txt  test_users.md
src/: create_mixes_from_json.py  movies_by_genre.json
src/backend/: constant.py
src/backend/application/: committer.py  errors.py  password_hasher.py
src/backend/application/repositories/: auth_token.py  film.py  (+6 more)
src/backend/config/: settings.py
src/backend/domain/: auth_token.py  auth_token_id.py  film.py  film_id.py  genre.py  genre_id.py  gradient_color.py  mix.py  mix_id.py  mix_item.py  mood.py  mood_id.py  recommended_film.py  user.py  user_id.py  watchlist.py  watchlist_id.py  watchlist_item.py  watchlist_type.py
src/backend/infrastructure/: argon2_password_hasher.py  ioc.py
src/backend/main/: app.py
src/backend/presentation/: jwt.py  schemas.py
src/bot/: __main__.py
src/bot/adapters/: __init__.py  repository_adapter.py
src/bot/database/: __init__.py  repository.py
src/bot/handlers/: __init__.py  auth.py  start.py
src/bot/keyboards/: auth.py
src/bot/middlewares/: db.py
tests/e2e/: conftest.py  test_auth.py  test_films.py  test_genres.py  test_mix.py  test_recommend.py  test_watchlists.py  tests.py
tests/unit/: conftest.py
tests/unit/application/: test_errors.py
tests/unit/domain/: test_auth_token.py  test_film.py  test_genre.py  test_mix.py  test_mood.py  test_user.py  test_watchlist.py
tests/unit/infrastructure/: test_argon2_password_hasher.py
tests/unit/persistence/: test_committer.py
(+60 files in other folders)
