[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=0.32.2",
    "aioboto3>=14.0.0",
    "aiogram>=3.18.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.14.1",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "dishka>=1.4.2",
    "httpx>=0.28.1",
    "litestar[jwt,pydantic,standard]>=2.15.1",
    "openai>=1.65.2",
    "pydantic-settings>=2.8.1",
    "pytest-asyncio>=0.25.3",
    "requests>=2.32.3",
    "sqlalchemy[asyncio]>=2.0.38",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "mypy[faster-cache]>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.9",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "EM",
    "TRY003",
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC002",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "PLR2004",
]
